--- a/app/src/main/res/layout-xlarge/activity_add_family.xml
+++ b/app/src/main/res/layout-xlarge/activity_add_family.xml
@@ -9,8 +9,12 @@
     <include
         android:id="@+id/include"
         layout="@layout/family_member"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -20,8 +24,10 @@
         android:id="@+id/addFamilyMem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
         android:padding="20dp"
         android:text="Add"
