--- a/app/src/main/res/layout-xlarge/activity_edit_school_details.xml
+++ b/app/src/main/res/layout-xlarge/activity_edit_school_details.xml
@@ -104,6 +104,7 @@
                 android:id="@+id/chooseStateSchool"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="end"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
@@ -146,6 +147,7 @@
                 android:id="@+id/chooseCity"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="end"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
@@ -189,6 +191,7 @@
                 android:id="@+id/selectSchool"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="end"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
