--- a/app/src/main/res/layout-xlarge/subject_entry.xml
+++ b/app/src/main/res/layout-xlarge/subject_entry.xml
@@ -18,11 +18,12 @@
 
     <EditText
         android:id="@+id/marksSubject"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:inputType="numberDecimal"
         android:labelFor="@+id/marksSubject"
+        android:minEms="3"
         android:text="20"
         android:textAlignment="center"
         android:textSize="@dimen/largeTextSize" />
@@ -31,14 +32,15 @@
         android:layout_width="10dp"
         android:layout_height="wrap_content"
         android:text="/"
-        android:textSize="30sp" />
+        android:textSize="40sp" />
 
     <EditText
         android:id="@+id/totalMarksSubject"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:inputType="numberDecimal"
+        android:minEms="3"
         android:text="100"
         android:textAlignment="center"
         android:textSize="@dimen/largeTextSize" />
@@ -47,7 +49,7 @@
         android:id="@+id/deleteSubjectItem"
         android:layout_width="30dp"
         android:layout_height="match_parent"
-        android:background="@color/cardview_shadow_end_color"
+        android:background="@color/transparent"
         android:contentDescription="Delete"
         android:padding="30dp"
         app:srcCompat="@android:drawable/ic_delete" />
