--- a/app/src/main/res/layout-xlarge/video_item.xml
+++ b/app/src/main/res/layout-xlarge/video_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/videoItemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -24,19 +25,23 @@
 
         <TextView
             android:id="@+id/videoCaption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:maxEms="8"
+            android:gravity="start"
             android:text="Video Name"
+            android:textAlignment="viewStart"
             android:textSize="@dimen/largeTextSize"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/videoDuration"
             app:layout_constraintLeft_toRightOf="@+id/videoThumbnail"
-            app:layout_constraintTop_toBottomOf="@+id/buttonsVideoItem" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonsVideoItem"
+            app:layout_constraintWidth_default="wrap" />
 
         <TextView
             android:id="@+id/videoDuration"
@@ -55,6 +60,7 @@
             android:id="@+id/buttonsVideoItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -66,7 +72,7 @@
                 android:layout_height="60dp"
                 android:background="@color/cardview_light_background"
                 android:contentDescription="ratevideo"
-                app:srcCompat="@drawable/ic_star_black_24dp" />
+                android:src="@drawable/ic_star_black_24dp" />
 
             <ImageButton
                 android:id="@+id/favorites"
@@ -82,16 +88,15 @@
                 android:layout_height="60dp"
                 android:background="@color/cardview_light_background"
                 android:contentDescription="videoShare"
-                app:srcCompat="@drawable/ic_menu_share" />
+                android:src="@drawable/ic_menu_share" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/videoPublishedBy"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="0dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:maxEms="8"
@@ -101,6 +106,7 @@
             app:layout_constraintHorizontal_bias="0.535"
             app:layout_constraintLeft_toRightOf="@+id/videoDuration"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/videoCaption" />
+            app:layout_constraintTop_toBottomOf="@+id/videoCaption"
+            app:layout_constraintWidth_default="wrap" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
