--- a/app/src/main/res/values-xlarge/dimens.xml
+++ b/app/src/main/res/values-xlarge/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="subjectCardSizeWidth">240dp</dimen>
+    <dimen name="actionBarTextSize">70sp</dimen>
+
+    <item name="visible" type="id" />
+    <item name="masked" type="id" />
 </resources>
