--- a/app/src/main/res/layout-xlarge/new_education_details.xml
+++ b/app/src/main/res/layout-xlarge/new_education_details.xml
@@ -68,8 +68,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:padding="30dp"
+                            android:padding="5dp"
                             android:text="Add a Subject"
+                            android:textAllCaps="false"
                             android:textSize="@dimen/largeTextSize" />
 
                         <Button
@@ -78,9 +79,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
+                            android:layout_marginLeft="10dp"
                             android:layout_weight="1"
-                            android:padding="30dp"
+                            android:padding="5dp"
                             android:text="SAVE"
+                            android:textAllCaps="false"
                             android:textSize="@dimen/largeTextSize" />
                     </LinearLayout>
 
@@ -123,7 +126,7 @@
                     <Spinner
                         android:id="@+id/selectTestType"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
