--- a/app/src/main/res/layout-xlarge/video_item.xml
+++ b/app/src/main/res/layout-xlarge/video_item.xml
@@ -25,30 +25,30 @@
 
         <TextView
             android:id="@+id/videoCaption"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             android:gravity="start"
+            android:maxEms="@integer/emsSize"
             android:text="Video Name"
             android:textAlignment="viewStart"
             android:textSize="@dimen/largeTextSize"
-            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/videoDuration"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/videoThumbnail"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonsVideoItem"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_default="wrap" />
 
         <TextView
             android:id="@+id/videoDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginRight="0dp"
             android:background="@color/cardview_dark_background"
             android:text="Duration"
             android:textColor="@color/cardview_light_background"
@@ -103,7 +103,7 @@
             android:text="Published By"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.535"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/videoDuration"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/videoCaption"
