--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/videoItemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,8 +14,8 @@
 
         <ImageView
             android:id="@+id/videoThumbnail"
-            android:layout_width="150dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/thumbWidth"
+            android:layout_height="@dimen/thumbHeight"
             android:contentDescription="videoThumbnail"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -27,13 +28,17 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="32dp"
             android:ellipsize="end"
-            android:maxEms="8"
+            android:maxEms="@integer/emsSize"
             android:text="Video Name"
             app:layout_constraintBottom_toTopOf="@+id/videoDuration"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/videoThumbnail"
-            app:layout_constraintTop_toBottomOf="@+id/buttonsVideoItem" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_default="wrap" />
 
         <TextView
             android:id="@+id/videoDuration"
@@ -44,7 +49,7 @@
             android:background="@color/cardview_dark_background"
             android:text="Duration"
             android:textColor="@color/cardview_light_background"
-            app:layout_constraintBottom_toBottomOf="@+id/videoThumbnail"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="@+id/videoThumbnail" />
 <LinearLayout
     android:id="@+id/buttonsVideoItem"
@@ -85,13 +90,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="0dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="0dp"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
-            android:maxEms="8"
+            android:maxEms="@integer/emsSize"
             android:text="Published By"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.535"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/videoDuration"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/videoCaption" />
