--- a/app/src/main/res/layout-xlarge/family_member.xml
+++ b/app/src/main/res/layout-xlarge/family_member.xml
@@ -106,10 +106,10 @@
                 android:id="@+id/familyMemberRelation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                android:layout_gravity="right"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:textAlignment="textEnd"
+                android:textAlignment="gravity"
                 android:textSize="28sp" />
 
         </LinearLayout>
