--- a/app/src/main/res/layout-xlarge/generated_report_card.xml
+++ b/app/src/main/res/layout-xlarge/generated_report_card.xml
@@ -25,7 +25,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="SchoolName:___________"
-            android:textSize="@dimen/spinnerHeader"
+            android:textSize="@dimen/largeTextSize"
             app:layout_constraintHorizontal_bias="0.975"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -41,7 +41,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="School Address:_______"
-            android:textSize="@dimen/spinnerHeader"
+            android:textSize="@dimen/largeTextSize"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -56,7 +56,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:text="Student Name:"
-            android:textSize="@dimen/spinnerHeader"
+            android:textSize="@dimen/largeTextSize"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/classReport"
@@ -70,9 +70,25 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:text="Class:"
-            android:textSize="@dimen/spinnerHeader"
+            android:textSize="@dimen/largeTextSize"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/schoolAddressReport" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/testsReport"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="46dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/studentNameReport" />
 
         <ImageButton
             android:id="@+id/saveReport"
@@ -87,21 +103,6 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/subjectsList"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="16dp"
-            android:text="subjectsList"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/studentNameReport" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
