--- a/app/src/main/res/layout-xlarge/nav_header_navigation_drawer.xml
+++ b/app/src/main/res/layout-xlarge/nav_header_navigation_drawer.xml
@@ -5,7 +5,7 @@
     android:layout_height="250dp"
     android:background="@color/colorPrimary"
     android:gravity="bottom"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,8 +14,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="180dp"
+        android:layout_width="130dp"
+        android:layout_height="150dp"
         android:contentDescription="App Logo"
         android:scaleType="fitXY"
         app:srcCompat="@mipmap/cognichamplogo" />
