--- a/app/src/main/res/layout-xlarge/profile.xml
+++ b/app/src/main/res/layout-xlarge/profile.xml
@@ -9,13 +9,15 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="left"
         android:orientation="vertical"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
@@ -25,12 +27,13 @@
             android:id="@+id/linearLayout11"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="left">
+            android:layout_gravity="left"
+            android:gravity="left"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView25"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingRight="30dp"
                 android:text="State"
@@ -39,7 +42,7 @@
             <Spinner
                 android:id="@+id/stateSpinner"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:minWidth="30dp"
                 android:textSize="@dimen/largeTextSize" />
@@ -48,7 +51,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:layout_marginTop="8dp"
             android:gravity="left"
             android:orientation="horizontal">
@@ -57,14 +60,16 @@
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingRight="15dp"
                 android:text="District"
                 android:textSize="@dimen/largeTextSize" />
 
             <Spinner
                 android:id="@+id/districtSpinner"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:gravity="end"
                 android:minWidth="30dp"
                 android:textAlignment="textEnd"
                 android:textSize="@dimen/largeTextSize" />
@@ -74,11 +79,10 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="122dp">
+            android:gravity="left"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="match_parent"
