--- a/app/src/main/res/layout-xlarge/profile1.xml
+++ b/app/src/main/res/layout-xlarge/profile1.xml
@@ -17,6 +17,7 @@
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:weightSum="2"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">
@@ -44,44 +45,43 @@
 
     <LinearLayout
         android:id="@+id/linearLayout12"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="left"
-        android:weightSum="2"
+        android:orientation="horizontal"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup">
 
         <TextView
             android:id="@+id/presentClassProfile"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_weight="1"
             android:text="Present Age/Class"
             android:textSize="@dimen/largeTextSize" />
 
         <Spinner
             android:id="@+id/presentClassSpinnerProfile"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:gravity="end"
+            android:textAlignment="textEnd"
             android:textSize="@dimen/largeTextSize" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -105,6 +105,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:hintTextAppearance="@style/TextLabel"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">
@@ -133,6 +134,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:hintTextAppearance="@style/TextLabel"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
