--- a/app/src/main/res/layout-xlarge/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout-xlarge/spinner_dropdown_item.xml
@@ -2,8 +2,10 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     style="?android:attr/spinnerDropDownItemStyle"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="end"
     android:ellipsize="marquee"
     android:maxLines="1"
+    android:textAlignment="viewEnd"
     android:textSize="38sp" />
