--- a/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -20,28 +20,29 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout android:id="@+id/frame_layout"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/navigation"
-        android:animateLayoutChanges="true"
         android:layout_marginTop="60dp"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        android:animateLayoutChanges="true">
     </FrameLayout>
 
 
     <android.support.design.widget.FloatingActionButton
-        android:layout_height="wrap_content"
+        android:id="@+id/FloatingActionButton"
         android:layout_width="wrap_content"
-        app:layout_anchor="@id/frame_layout"
-        app:layout_anchorGravity="bottom|right|end"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"
-        android:src="@android:drawable/ic_input_add"
         android:layout_marginRight="16dp"
-        android:id="@+id/FloatingActionButton"
         android:clickable="true"
+        android:elevation="20dp"
+        android:src="@android:drawable/ic_input_add"
         app:backgroundTint="@color/colorAccent"
-        app:rippleColor="@color/colorAccent"
-        app:fabSize="mini" />
+        app:fabSize="mini"
+        app:layout_anchor="@id/frame_layout"
+        app:layout_anchorGravity="bottom|right|end"
+        app:rippleColor="@color/colorAccent" />
 </android.support.design.widget.CoordinatorLayout>
