--- a/app/src/main/res/layout/nav_header_navigation_drawer.xml
+++ b/app/src/main/res/layout/nav_header_navigation_drawer.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/nav_header_height"
     android:background="@color/colorPrimary"
     android:gravity="bottom"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,9 +14,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:contentDescription="App Logo"
         android:layout_width="100dp"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
+        android:contentDescription="App Logo"
         android:scaleType="fitXY"
         app:srcCompat="@mipmap/cognichamplogo" />
 
@@ -25,11 +25,9 @@
         android:layout_height="match_parent"
         android:padding="5dp"
         android:text="@string/app_name"
-        android:textStyle="bold"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="18sp"
-        android:textAlignment="textEnd"
-        android:gravity="center_vertical"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textStyle="bold" />
 
 
 </LinearLayout>
