--- a/app/src/main/res/layout-xlarge/grade_entry.xml
+++ b/app/src/main/res/layout-xlarge/grade_entry.xml
@@ -1,40 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_margin="20dp"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/subjectNameEducation"
+        android:id="@+id/gradeMarks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="15"
-        android:text="SubjectName"
-        android:textAlignment="center" />
+        android:padding="20dp"
+        android:text="Topic"
+        android:textAlignment="center"
+        android:textSize="@dimen/largeTextSize" />
+
     <EditText
         android:id="@+id/marksGrade"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:inputType="numberDecimal"
         android:labelFor="@+id/marksGrade"
         android:text="20"
-        android:textAlignment="center" />
-    <TextView
-        android:layout_width="10dp"
-        android:layout_height="wrap_content"
-        android:text="/"
-        android:textSize="30sp" />
-    <EditText
-        android:id="@+id/totalMarksSubject"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:inputType="numberDecimal"
-        android:text="100"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="@dimen/largeTextSize" />
 
     <ImageButton
         android:id="@+id/deleteGradeItem"
