--- a/app/src/main/res/layout/grade_entry.xml
+++ b/app/src/main/res/layout/grade_entry.xml
@@ -7,33 +7,20 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/subjectNameEducation"
+        android:id="@+id/gradeMarks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="15"
-        android:text="SubjectName"
+        android:text="Topic"
         android:textAlignment="center" />
+
     <EditText
         android:id="@+id/marksGrade"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:inputType="numberDecimal"
         android:labelFor="@+id/marksGrade"
         android:text="20"
-        android:textAlignment="center" />
-    <TextView
-        android:layout_width="10dp"
-        android:layout_height="wrap_content"
-        android:text="/"
-        android:textSize="30sp" />
-    <EditText
-        android:id="@+id/totalMarksSubject"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:inputType="numberDecimal"
-        android:text="100"
         android:textAlignment="center" />
 
     <ImageButton
