--- a/app/src/main/res/layout/report_card_frame.xml
+++ b/app/src/main/res/layout/report_card_frame.xml
@@ -4,21 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--<android.support.design.widget.TabLayout-->
-    <!--android:id="@+id/reportLayout"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content">-->
+    <android.support.design.widget.TabLayout
+        android:id="@+id/reportLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <!--<android.support.design.widget.TabItem-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="Generated Report" />-->
+        <android.support.design.widget.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Generated Report" />
 
-    <!--<android.support.design.widget.TabItem-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="Report" />-->
-    <!--</android.support.design.widget.TabLayout>-->
+        <android.support.design.widget.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Report" />
+    </android.support.design.widget.TabLayout>
 
     <FrameLayout
         android:id="@+id/reportCardContainer"
