--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
 
     <color name="black_overlay">#66000000</color>
     <color name="black">#353535</color>
+    <color name="reportHeading">#2340e1</color>
+    <color name="reportGrades">#0b8f2a</color>
 
 
     <color name="primary">#2196F3</color>
