--- a/app/src/main/res/layout-xlarge/generated_report_card.xml
+++ b/app/src/main/res/layout-xlarge/generated_report_card.xml
@@ -12,7 +12,6 @@
         android:id="@+id/containerLayout"
         android:layout_width="500dp"
         android:layout_height="match_parent"
-        android:background="@drawable/border"
         android:orientation="vertical">
 
 
@@ -119,8 +118,7 @@
                 android:id="@+id/schoolLogo"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:layout_weight="1"
-                android:src="@drawable/com_facebook_close" />
+                android:layout_weight="1" />
 
             <ImageButton
                 android:id="@+id/saveReport"
@@ -182,7 +180,6 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/border"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -196,7 +193,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginLeft="=8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
             android:text="Class:"
