--- a/app/src/main/res/layout-xlarge/profile.xml
+++ b/app/src/main/res/layout-xlarge/profile.xml
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:minWidth="30dp"
+                android:textAlignment="textEnd"
                 android:textSize="@dimen/largeTextSize" />
         </LinearLayout>
 
@@ -70,7 +70,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:gravity="end"
-                android:minWidth="30dp"
                 android:textAlignment="textEnd"
                 android:textSize="@dimen/largeTextSize" />
 
