--- a/app/src/main/res/layout-xlarge/reportcarditem.xml
+++ b/app/src/main/res/layout-xlarge/reportcarditem.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="480dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/border">
 
     <TextView
         android:id="@+id/testTypeReport"
@@ -83,7 +84,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/border"
         android:padding="5dp"
         android:text="@string/teachersComments"
         android:textColor="@android:color/black"
